--- a/pkg/pfv/FlowEngine.ipp.in
+++ b/pkg/pfv/FlowEngine.ipp.in
@@ -621,11 +621,12 @@ void TemplateFlowEngine_@TEMPLATE_FLOW_NAME@<_CellInfo,_VertexInfo,_Tesselation,
 		else cell->info().dv() += dVol*invDeltaT; // thermalEngine resets dv() to zero and starts adding to it before this.
                 cell->info().volume() = newVol;
 		if (defTolerance>0) { //if the criterion is not used, then we skip these updates a save a LOT of time when Nthreads > 1
-			#ifdef YADE_OPENMP
+			// the (YADE_REAL_BIT==64) check means that for other Real types a proper std::atomic or mutex implementation would be faster.
+			#if defined(YADE_OPENMP) and (YADE_REAL_BIT==64)
 			#pragma omp atomic
 			#endif
 			totVol+=cell->info().volumeSign*newVol;
-			#ifdef YADE_OPENMP
+			#if defined(YADE_OPENMP) and (YADE_REAL_BIT==64)
 			#pragma omp atomic
 			#endif
                 	totDVol+=dVol;}
