--- a/core/main/main.py.in
+++ b/core/main/main.py.in
@@ -60,7 +60,9 @@ par.add_argument('-f',help=('Set "Default" filter for logging https://yade-dem.o
 par.add_argument('-n',help="Run without graphical interface (equivalent to unsetting the DISPLAY environment variable)",dest='nogui',action='store_true')
 par.add_argument('--test',help="Run regression test suite and exit; the exists status is 0 if all tests pass, 1 if a test fails and 2 for an unspecified exception.",dest="test",action='store_true')
 par.add_argument('--checks',help='Run a series of user-defined check tests as described in /yade/scripts/checks-and-tests/checks/README and https://yade-dem.org/doc/prog.html#regression-tests',dest='checks',action='store_true')
-par.add_argument('--performance',help='Starts a test to measure the productivity',dest='performance',action='store_true')
+par.add_argument('--performance',help='Starts a regular test to measure the productivity',dest='performance',action='store_true')
+par.add_argument('--quickperformance',help='Starts a quick test to measure the productivity',dest='quickperformance',action='store_true')
+par.add_argument('--oneperformance',help='Starts a single large test on 200000 spheres to measure the productivity',dest='oneperformance',action='store_true')
 par.add_argument('script',nargs='?',default='',type=str,help=argparse.SUPPRESS)
 par.add_argument('args',nargs=argparse.REMAINDER,help=argparse.SUPPRESS) # see argparse doc, par.disable_interspersed_args() from optargs module
 par.add_argument('-L','--libs',help='import libraries at startup before importing yade libs. May be used when the ordering of imports matter (see fixed bug (on old site) https://bugs.launchpad.net/yade/+bug/1183402 and discussion in https://gitlab.com/yade-dev/trunk/issues/18). The option can be used multiple times, as in "yade -Llib1 -Llib2"',default=None,action='append',dest='impLibraries',type=str)
@@ -188,7 +190,7 @@ if opts.checks:
 	execfile(checksPath+'/checkList.py')
 
 # Run performance check test
-if opts.performance:
+if opts.performance or opts.quickperformance or opts.oneperformance:
 	checksPath=libDir+'/py/yade/tests/checks/performance'
 	execfile(checksPath+'/checkPerf.py')
 
