DONT MERGE: Breaking changes to get the Intel compiler to work, in order to make benchmarks.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,48 @@ ELSE (DEBUG)
   ENDIF (NOT(CMAKE_BUILD_TYPE))
 ENDIF (DEBUG)
 
+IF(EXPERIMENTALLY_FAST)
+  # https://stackoverflow.com/questions/47703436/isnan-does-not-work-correctly-with-ofast-flags
+  # https://stackoverflow.com/questions/14492436/g-optimization-beyond-o3-ofast
+  # -fno-finite-math-only   - NaN is used by checkJCFpm.py, checkWirePM.py and few other places
+  # -fsigned-zeros          - signed zeros are used by CGAL
+  # -fno-associative-math   - is required by -fsigned-zeros -fno-finite-math-only
+    IF (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-fast -fno-associative-math -fno-finite-math-only -fsigned-zeros")
+    ELSE (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-fast -fno-associative-math -fno-finite-math-only -fsigned-zeros")
+      ADD_DEFINITIONS("-DBOOST_MP_USE_FLOAT128")
+     # SET(CMAKE_CXX_FLAGS_RELEASE "-fast -fno-associative-math -fno-finite-math-only -fsigned-zeros -Qoption,cpp,--extended_float_type")
+    #  ADD_DEFINITIONS("-DBOOST_MP_USE_QUAD")
+    ENDIF (VECTORIZE)
+    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST:${Esc}[0m -fast -fno-associative-math -fno-finite-math-only -fsigned-zeros, due diligence")
+    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST: Due diligence.${Esc}[0m")
+    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST: Be careful, this is an experimental option. It passes tests, but you should confirm yourself that your calculations produce correct results before using it for anything serious.${Esc}[0m")
+    SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} EXPERIMENTALLY_FAST")
+ENDIF(EXPERIMENTALLY_FAST)
+IF(DANGEROUSLY_FAST)
+  IF(ENABLE_CGAL)
+    MESSAGE(FATAL_ERROR "${Esc}[91m* Cannot enable DANGEROUSLY_FAST when ENABLE_CGAL=ON, you need to disable CGAL *${Esc}[0m")
+  ELSE()
+    IF (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-fast -faligned-new")
+    ELSE (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-fast")
+      ADD_DEFINITIONS("-DBOOST_MP_USE_FLOAT128")
+     # SET(CMAKE_CXX_FLAGS_RELEASE "-fast -Qoption,cpp,--extended_float_type")
+    #  ADD_DEFINITIONS("-DBOOST_MP_USE_QUAD")
+    ENDIF (VECTORIZE)
+#    ADD_DEFINITIONS("-DYADE_IGNORE_IEEE_INFINITY_NAN")
+    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST:${Esc}[0m -fast -Qoption,cpp,--extended_float_type")
+    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST: Due diligence.${Esc}[0m")
+    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST: Be careful, this is an experimental option and you should confirm yourself that your calculations produce correct results before using it for anything serious.${Esc}[0m")
+    SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} DANGEROUSLY_FAST")
+  ENDIF()
+ENDIF(DANGEROUSLY_FAST)
+IF( (EXPERIMENTALLY_FAST OR DANGEROUSLY_FAST) AND (CMAKE_BUILD_TYPE STREQUAL "Debug") )
+    MESSAGE(FATAL_ERROR "${Esc}[91m* The *_FAST flags are not used by debug build, because it sets 'CMAKE_CXX_FLAGS_RELEASE' *${Esc}[0m")
+ENDIF( (EXPERIMENTALLY_FAST OR DANGEROUSLY_FAST) AND (CMAKE_BUILD_TYPE STREQUAL "Debug") )
+
 IF(ENABLE_LOGGER)
   MESSAGE(STATUS "${Esc}[36mLog filtering: enabled${Esc}[0m")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} BoostLog")
@@ -614,7 +656,7 @@ SET(LINKLIBS  "${LINKLIBS};${BZIP2_LIBRARIES};${ZLIB_LIBRARIES};")
 IF((Boost_MAJOR_VERSION EQUAL 1) OR (Boost_MAJOR_VERSION GREATER 1) AND
   ((Boost_MINOR_VERSION EQUAL 53) OR (Boost_MINOR_VERSION GREATER 53)))
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} Odeint")
-  ADD_DEFINITIONS("-DYADE_ODEINT")
+#  ADD_DEFINITIONS("-DYADE_ODEINT")
 ELSE((Boost_MAJOR_VERSION EQUAL 1) OR (Boost_MAJOR_VERSION GREATER 1) AND
     ((Boost_MINOR_VERSION EQUAL 53) OR (Boost_MINOR_VERSION GREATER 53)))
   SET(DISABLED_FEATS "${DISABLED_FEATS} Odeint")
@@ -789,9 +831,9 @@ IF(ENABLE_PFVFLOW AND ENABLE_LINSOLV)
     set(SUITESPARSE_PREFIX_PATH /usr)
     MESSAGE(STATUS "Using typical suitesparse path " ${SUITESPARSE_PREFIX_PATH})
   ENDIF(DEFINED SUITESPARSEPATH)
-  FIND_PACKAGE(Cholmod)
-  FIND_PACKAGE(OpenBlas)
-  FIND_PACKAGE(Metis)
+#  FIND_PACKAGE(Cholmod)
+#  FIND_PACKAGE(OpenBlas)
+#  FIND_PACKAGE(Metis)
 
   IF(CHOLMOD_FOUND AND OPENBLAS_FOUND AND METIS_FOUND AND CGAL_FOUND)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CGAL_DEFINITIONS} -DLINSOLV")
@@ -965,8 +1007,8 @@ ENDIF(ENABLE_PROFILING)
 
 #===========================================================
 IF(ENABLE_POTENTIAL_PARTICLES)
-  FIND_PACKAGE(OpenBlas REQUIRED)
-  FIND_PACKAGE(LAPACK REQUIRED)
+#  FIND_PACKAGE(OpenBlas REQUIRED)
+#  FIND_PACKAGE(LAPACK REQUIRED)
   IF(OPENBLAS_FOUND AND LAPACK_FOUND)
     ADD_DEFINITIONS("-DYADE_POTENTIAL_PARTICLES")
     SET(LINKLIBS  "${LINKLIBS};${OPENBLAS_LIBRARY};${LAPACK_LIBRARY}")
@@ -988,8 +1030,8 @@ ENDIF(ENABLE_POTENTIAL_PARTICLES)
 #===========================================================
 IF(ENABLE_POTENTIAL_BLOCKS)
   INCLUDE(FindCLP)
-  FIND_PACKAGE(OpenBlas REQUIRED)
-  FIND_PACKAGE(LAPACK REQUIRED)
+#  FIND_PACKAGE(OpenBlas REQUIRED)
+#  FIND_PACKAGE(LAPACK REQUIRED)
   IF(CLP_FOUND AND OPENBLAS_FOUND AND LAPACK_FOUND)
     ADD_DEFINITIONS("-DYADE_POTENTIAL_BLOCKS")
     INCLUDE_DIRECTORIES(${CLP_INCLUDE_DIR} ${CLP2_INCLUDE_DIR} )
@@ -1002,10 +1044,10 @@ IF(ENABLE_POTENTIAL_BLOCKS)
     SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
     SET(ENABLE_POTENTIAL_BLOCKS OFF)
   ENDIF(CLP_FOUND AND OPENBLAS_FOUND AND LAPACK_FOUND)
-IF(COINUTILS_VERSION VERSION_LESS 2.11.3)
-  set (CMAKE_CXX_STANDARD 14)
-  MESSAGE(STATUS "${Esc}[91mWARNING: coinutils version older than 2.11.3. Falling back to C++14.${Esc}[0m")
-ENDIF(COINUTILS_VERSION VERSION_LESS 2.11.3)
+#IF(COINUTILS_VERSION VERSION_LESS 2.11.3)
+#  set (CMAKE_CXX_STANDARD 14)
+#  MESSAGE(STATUS "${Esc}[91mWARNING: coinutils version older than 2.11.3. Falling back to C++14.${Esc}[0m")
+#ENDIF(COINUTILS_VERSION VERSION_LESS 2.11.3)
 ELSE(ENABLE_POTENTIAL_BLOCKS)
   SET(DISABLED_FEATS "${DISABLED_FEATS} PotentialBlocks")
 ENDIF(ENABLE_POTENTIAL_BLOCKS)
