DONT MERGE: changes done to do the gcc benchmarks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -171,6 +171,42 @@ ELSE (DEBUG)
   ENDIF (NOT(CMAKE_BUILD_TYPE))
 ENDIF (DEBUG)
 
+IF(EXPERIMENTALLY_FAST)
+  # https://stackoverflow.com/questions/47703436/isnan-does-not-work-correctly-with-ofast-flags
+  # https://stackoverflow.com/questions/14492436/g-optimization-beyond-o3-ofast
+  # -fno-finite-math-only   - NaN is used by checkJCFpm.py, checkWirePM.py and few other places
+  # -fsigned-zeros          - signed zeros are used by CGAL
+  # -fno-associative-math   - is required by -fsigned-zeros -fno-finite-math-only
+    IF (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -fno-associative-math -fno-finite-math-only -fsigned-zeros")
+    ELSE (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -fno-associative-math -fno-finite-math-only -fsigned-zeros")
+    ENDIF (VECTORIZE)
+    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST:${Esc}[0m -Ofast -fno-associative-math -fno-finite-math-only -fsigned-zeros, due diligence")
+    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST: Due diligence.${Esc}[0m")
+    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST: Be careful, this is an experimental option. It passes tests, but you should confirm yourself that your calculations produce correct results before using it for anything serious.${Esc}[0m")
+    SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} EXPERIMENTALLY_FAST")
+ENDIF(EXPERIMENTALLY_FAST)
+IF(DANGEROUSLY_FAST)
+  IF(ENABLE_CGAL)
+    MESSAGE(FATAL_ERROR "${Esc}[91m* Cannot enable DANGEROUSLY_FAST when ENABLE_CGAL=ON, you need to disable CGAL *${Esc}[0m")
+  ELSE()
+    IF (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -faligned-new")
+    ELSE (VECTORIZE)
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast")
+    ENDIF (VECTORIZE)
+    #ADD_DEFINITIONS("-DYADE_IGNORE_IEEE_INFINITY_NAN")
+    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST:${Esc}[0m -Ofast ")
+    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST: Due diligence.${Esc}[0m")
+    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST: Be careful, this is an experimental option and you should confirm yourself that your calculations produce correct results before using it for anything serious.${Esc}[0m")
+    SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} DANGEROUSLY_FAST")
+  ENDIF()
+ENDIF(DANGEROUSLY_FAST)
+IF( (EXPERIMENTALLY_FAST OR DANGEROUSLY_FAST) AND (CMAKE_BUILD_TYPE STREQUAL "Debug") )
+    MESSAGE(FATAL_ERROR "${Esc}[91m* The *_FAST flags are not used by debug build, because it sets 'CMAKE_CXX_FLAGS_RELEASE' *${Esc}[0m")
+ENDIF( (EXPERIMENTALLY_FAST OR DANGEROUSLY_FAST) AND (CMAKE_BUILD_TYPE STREQUAL "Debug") )
+
 IF(ENABLE_LOGGER)
   MESSAGE(STATUS "${Esc}[36mLog filtering: enabled${Esc}[0m")
   SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} BoostLog")
