The CMakeLists.txt used for -march=native -mtune=native

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,11 +178,11 @@ IF(EXPERIMENTALLY_FAST)
   # -fsigned-zeros          - signed zeros are used by CGAL
   # -fno-associative-math   - is required by -fsigned-zeros -fno-finite-math-only
     IF (VECTORIZE)
-      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -fno-associative-math -fno-finite-math-only -fsigned-zeros")
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -march=native -mtune=native -fno-associative-math -fno-finite-math-only -fsigned-zeros")
     ELSE (VECTORIZE)
-      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -fno-associative-math -fno-finite-math-only -fsigned-zeros")
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -march=native -mtune=native -fno-associative-math -fno-finite-math-only -fsigned-zeros")
     ENDIF (VECTORIZE)
-    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST:${Esc}[0m -Ofast -fno-associative-math -fno-finite-math-only -fsigned-zeros, due diligence")
+    MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST:${Esc}[0m -Ofast -march=native -mtune=native -fno-associative-math -fno-finite-math-only -fsigned-zeros, due diligence")
     MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST: Due diligence.${Esc}[0m")
     MESSAGE(STATUS "${Esc}[91mEnabling EXPERIMENTALLY_FAST: Be careful, this is an experimental option. It passes tests, but you should confirm yourself that your calculations produce correct results before using it for anything serious.${Esc}[0m")
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} EXPERIMENTALLY_FAST")
@@ -192,12 +192,12 @@ IF(DANGEROUSLY_FAST)
     MESSAGE(FATAL_ERROR "${Esc}[91m* Cannot enable DANGEROUSLY_FAST when ENABLE_CGAL=ON, you need to disable CGAL *${Esc}[0m")
   ELSE()
     IF (VECTORIZE)
-      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -faligned-new")
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -march=native -mtune=native -faligned-new")
     ELSE (VECTORIZE)
-      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast")
+      SET(CMAKE_CXX_FLAGS_RELEASE "-Ofast -march=native -mtune=native")
     ENDIF (VECTORIZE)
     #ADD_DEFINITIONS("-DYADE_IGNORE_IEEE_INFINITY_NAN")
-    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST:${Esc}[0m -Ofast ")
+    MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST:${Esc}[0m -Ofast  -march=native -mtune=native")
     MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST: Due diligence.${Esc}[0m")
     MESSAGE(STATUS "${Esc}[91mEnabling DANGEROUSLY_FAST: Be careful, this is an experimental option and you should confirm yourself that your calculations produce correct results before using it for anything serious.${Esc}[0m")
     SET(CONFIGURED_FEATS "${CONFIGURED_FEATS} DANGEROUSLY_FAST")
